@@ -72,8 +72,9 @@
           <version>3.0.0-M7</version> <!-- pick your own version -->
           <configuration>
             <forkCount>1</forkCount>
-            <argLine>--add-modules=jdk.incubator.vector</argLine>
-            <skipTests>true</skipTests>
+            <argLine>
+              @{argLine}
+            </argLine>
           </configuration>
         </plugin>
         <plugin>
@@ -98,30 +99,28 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
-        <plugin>
+         <!-- Configure jacoco code coverage -->
+         <plugin>
           <groupId>org.jacoco</groupId>
           <artifactId>jacoco-maven-plugin</artifactId>
-          <version>0.8.6</version>
+          <version>0.8.8</version>
           <executions>
-            <!--first
-            execution : for preparing JaCoCo runtime agent-->
-            <execution>
-              <id>prepare-agent</id>
-              <goals>
-                <goal>prepare-agent</goal>
-              </goals>
-            </execution>
-            <!--second
-            execution : for creating code coverage reports-->
-            <execution>
-              <id>report</id>
-              <phase>test</phase>
-              <goals>
-                <goal>report</goal>
-              </goals>
-            </execution>
+              <execution>
+                  <id>jacoco-prepare-agent</id>
+                  <phase>process-test-classes</phase>
+                  <goals>
+                      <goal>prepare-agent</goal>
+                  </goals>
+              </execution>
+              <execution>
+                  <id>jacoco-report</id>
+                  <phase>verify</phase>
+                  <goals>
+                      <goal>report</goal>
+                  </goals>
+              </execution>
           </executions>
-        </plugin>
+      </plugin>
       </plugins>
     </pluginManagement>
   </build>
